# fdhg-icl-paper

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-repro.txt
configs/: benchmark_tasks.csv  main.yaml
configs/experiments/: paper_artifact_manifest.yaml
configs/reproduction/: gate_task_schema_report.csv  legacy_task_specs.csv  legacy_task_specs.json  task_inventory.csv  task_inventory_detailed.csv  task_inventory_with_artifacts.csv  tasks.yaml
docs/: manuscript_results_update.md  paper_to_code_map.md  pr_description.md  reproducibility_gap_report.md
experiments/research_archive/: README.md
results/final_tables/: appendix_51task_gate_reconciled.csv  appendix_strict_dfs_fdhg_gate_audit.csv  appendix_strict_dfs_fdhg_seed_audit.csv  appendix_strict_gate_metric_coverage.csv  appendix_strict_gate_reconciliation.csv  appendix_strict_gate_seed_metrics.csv  final_all_runs.csv  final_failure_log.csv  legacy_validation_gate_seed_metrics_normalized.csv  legacy_vs_reproduced_metric_deltas.csv  legacy_vs_reproduced_seed_exactness.csv  paper_ablation_summary.csv  paper_diagnostic_summary.csv  paper_failure_log.csv  paper_main_runs.csv  paper_main_summary.csv  paper_stack_dmax2_summary.csv  rel_arxiv_extension_task_summary.csv  relbench_v2_fdhg_gate_outcome_summary.csv  relbench_v2_fdhg_gate_paper_table.csv  relbench_v2_fdhg_gate_unified_summary.csv  reproduced_validation_gate_seed_metrics.csv  synthetic_oracle_gap_by_seed.csv  synthetic_program_recovery_by_seed.csv
results/paper_tables/: efficiency_paper_table_relstack.csv  (+9 more)
src/fdhg/: __init__.py  (+1 more)
(+397 files in other folders)
