[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdhg-icl"
version = "0.1.0"
description = "Schema-guided feature compilation for relational prediction with frozen tabular foundation models."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "scikit-learn>=1.4",
  "duckdb>=1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
tabpfn = [
  "tabpfn",
  "torch",
]
gbdt = [
  "catboost",
  "xgboost",
]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[project.scripts]
fdhg-inspect = "fdhg.cli.inspect:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: tests requiring generated experiment artifacts",
]

